# Tetris

./: CMakeLists.txt  Makethis.sh  data.txt  main.cpp  run.sh
consts/: const.hpp
types/: core.cpp  core.hpp  defs.hpp  environment.cpp  environment.hpp  figures.hpp  pixel.cpp  pixel.hpp  sdl.cpp  sdl.hpp  symbolsprite.cpp  symbolsprite.hpp  tetramino.cpp  tetramino.hpp  tetrisroom.cpp  tetrisroom.hpp  text.hpp  timer.hpp  trand.hpp
